--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>MehraCodes – Portfolio</title>
+    <title>MehraCodes Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
